@@ -1,5 +1,13 @@
 2008-02-16  Jaap Haitsma  <jaap@haitsma.org>
 
+	* src/netspeed.c: (bytes_to_string), (redraw_graph),
+	(update_applet), (about_cb), (netspeed_applet_factory):
+	Some indentation fixes and cleanups
+	Use g_set_application_name to make sure that about dialog shows the
+	program name
+
+2008-02-16  Jaap Haitsma  <jaap@haitsma.org>
+
 	* src/netspeed.c:
 	* src/netspeed.h:
 	Don't use deprecated icon names. Fixes bug #516871
